--- a/finPath/package.json
+++ b/finPath/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "chart.js": "^4.4.3",
     "nuxt": "^3.12.4",
     "trpc-nuxt": "^0.10.22",
     "vue": "latest",
+    "vue-chartjs": "^5.3.1",
     "zod": "^3.23.8"
   }
 }
