--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: cd finPath
     - run: pwd
+    - run: ls
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
