adding default path

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,24 +9,26 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+
+
+jobs: 
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: finPath
     strategy:
       matrix:
         node-version: [18.x,20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases
     steps:
     - uses: actions/checkout@v4
-    - run: ls
-    - run: cd finPath
-    - run: pwd
-    - run: ls
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
