--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,11 +17,13 @@ jobs:
     defaults:
       run:
         working-directory: finPath
+    
     strategy:
       matrix:
         node-version: [18.x,20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases
     steps:
+    - run: pwd
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
