--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: pwd
+    - working-directory: finPath
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
