--- a/finPath/package.json
+++ b/finPath/package.json
@@ -10,13 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@trpc/client": "^10.45.2",
-    "@trpc/server": "^10.45.2",
-    "chart.js": "^4.4.3",
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.12.4",
-    "trpc-nuxt": "^0.10.22",
-    "vue": "latest",
-    "vue-chartjs": "^5.3.1",
-    "zod": "^3.23.8"
+    "vue": "latest"
+  },
+  "devDependencies": {
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.6.13"
   }
 }
