--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
+
 jobs: 
   build:
     runs-on: ubuntu-latest
@@ -19,18 +21,18 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [18.x,20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases
     steps:
-      - uses: actions/checkout@v4
-      - run: pwd
-      - working-directory: finPath
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+    - uses: actions/checkout@v4
+    - run: pwd
+    - working-directory: finPath
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
