--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: finPath
 
     strategy:
       matrix:
