--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,11 +24,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - run: pwd
+    - working-directory: finPath
+    - run: pwd
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        working-directory: finPath
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
