--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,10 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: finPath
 
     strategy:
       matrix:
@@ -24,14 +20,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: pwd
-    - working-directory: finPath
-    - run: pwd
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        working-directory: finPath
+    - name: Run CI
+      run: npm ci
+      working-directory: finPath
+    - name: Build
+      run: npm run build --if-present
+      working-directory: finPath
+    - name: Test
+      run: npm test
+      working-directory: finPath
