--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,8 +82,9 @@ jobs:
     - name: Terraform Format
       run: terraform fmt -check
       env:
-        GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
-
+        GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}}
+    - name: run pwd
+      run: pwd
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
