-input=false: disabled

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,7 +43,7 @@ jobs:
       run: pwd
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan #-input=false
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
 
