--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,12 +33,14 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      working-directory: finPath
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}}
+      working-directory: finPath
     - name: run pwd
       run: pwd
     # Generates an execution plan for Terraform
@@ -46,6 +48,7 @@ jobs:
       run: terraform plan #-input=false
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+      working-directory: finPath
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -54,3 +57,4 @@ jobs:
       run: terraform apply -auto-approve -input=false
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+      working-directory: finPath
