--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,3 +1,4 @@
+
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
@@ -33,3 +34,10 @@ jobs:
 #    - name: Test
  #     run: npm test
  #     working-directory: finPath
+    - name: Upload Artifact
+    - uses: actions/upload-artifact@v4
+      with:
+        name: my-artifact
+        path: artifacts/**
+        if-no-files-found: error
+        retention-days: 90
