--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,9 +8,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-
-
+    
 jobs: 
   build:
     runs-on: ubuntu-latest
@@ -25,13 +23,12 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases
     steps:
     - uses: actions/checkout@v4
-    - run: pwd
-    - working-directory: finPath
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        working-directory: finPath
     
     - run: npm ci
     - run: npm run build --if-present
