--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,12 +24,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: pwd
-    - working-directory: finPath
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        working-directory: finPath
     
     - run: npm ci
     - run: npm run build --if-present
