--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,10 +42,10 @@ jobs:
       uses: 'google-github-actions/auth@v2'
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
-      #with:
-        #workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+      with:
+        workload_identity_provider: 'projects/416228969428/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
         #auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
-        #service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
+        service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
       
     - id: 'upload-folder'
       uses: 'google-github-actions/upload-cloud-storage@v2'
