--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,13 +39,18 @@ jobs:
     #  run: npm test
      # working-directory: finPath
     - id: 'auth'
-      uses: 'google-github-actions/auth@v2'
-      env:
-        GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+      name: 'Authenticate to Google Cloud'
+      uses: `google-github-actions/auth@v0.4.0'
       with:
-        workload_identity_provider: 'projects/416228969428/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+      credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+   # - id: 'auth'
+     # uses: 'google-github-actions/auth@v2'
+      #env:
+       # GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+      #with:
+        #workload_identity_provider: 'projects/416228969428/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
         #auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
-        service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
+        #service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
       
     - id: 'upload-folder'
       uses: 'google-github-actions/upload-cloud-storage@v2'
