--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,7 @@ jobs:
       uses: 'google-github-actions/auth@v0.4.0'
       with:
         credentials_json: '${{ secrets.GCP_SA_KEY }}'
+        service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
    # - id: 'auth'
      # uses: 'google-github-actions/auth@v2'
       #env:
