--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,15 +38,20 @@ jobs:
    # - name: Test
     #  run: npm test
      # working-directory: finPath
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0.4.0'
-      env:
-          GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
-          working-directory: finPath
+    #- id: 'auth'
+     #name: 'Authenticate to Google Cloud'
+     # uses: 'google-github-actions/auth@v0.4.0'
+     # env:
+          #GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+         # working-directory: finPath
       #with:
         #credentials_json: '${{ secrets.GCP_SA_KEY }}'
         #service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v2'
+      with:
+        workload_identity_provider: 'principal://iam.googleapis.com/projects/416228969428/locations/global/workloadIdentityPools/finpath-workloadidentity/subject/SUBJECT_ATTRIBUTE_VALUE'
+        service_account: 'terraform-sa-finpath@finpath-430717.iam.gserviceaccount.com'
         
    # - id: 'auth'
      # uses: 'google-github-actions/auth@v2'
