--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,57 +1,57 @@
-name: 'Terraform'
+# name: 'Terraform'
 
-on:
-  push:
-    branches: [ "GCS" ]
-  pull_request:
-    branches: [ "GCS" ]
+# on:
+#   push:
+#     branches: [ "GCS" ]
+#   pull_request:
+#     branches: [ "GCS" ]
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
-jobs:
-  terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
-    environment: production
+# jobs:
+#   terraform:
+#     name: 'Terraform'
+#     runs-on: ubuntu-latest
+#     environment: production
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
+#     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+#     defaults:
+#       run:
+#         shell: bash
 
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
+#     steps:
+#     # Checkout the repository to the GitHub Actions runner
+#     - name: Checkout
+#       uses: actions/checkout@v4
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+#     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+#     - name: Setup Terraform
+#       uses: hashicorp/setup-terraform@v1
+#       with:
+#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
-      working-directory: finPath
+#     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+#     - name: Terraform Init
+#       run: terraform init
+#       working-directory: finPath
 
-    # Checks that all Terraform configuration files adhere to a canonical format
+#     # Checks that all Terraform configuration files adhere to a canonical format
     
-    - name: run pwd
-      run: pwd
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan #-input=false
-      env:
-        GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
-      working-directory: finPath
+#     - name: run pwd
+#       run: pwd
+#     # Generates an execution plan for Terraform
+#     - name: Terraform Plan
+#       run: terraform plan #-input=false
+#       env:
+#         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+#       working-directory: finPath
 
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' #&& github.event_name == 'push'
-      run: terraform apply -auto-approve 
-      env:
-        GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
-      working-directory: finPath
+#       # On push to "main", build or change infrastructure according to Terraform configuration files
+#       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+#     - name: Terraform Apply
+#       if: github.ref == 'refs/heads/main' #&& github.event_name == 'push'
+#       run: terraform apply -auto-approve 
+#       env:
+#         GOOGLE_CREDENTIALS: ${{secrets.GCP_SA_KEY}}
+#       working-directory: finPath
